fixed navbar z-index

--- a/src/components/Navbar/NavbarStyles.css
+++ b/src/components/Navbar/NavbarStyles.css
@@ -5,6 +5,7 @@ nav{
     width: 100%;
     background-color: #262333;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
 
 .content{
@@ -63,20 +64,21 @@ nav{
 }
 
 @media screen and (max-width: 769px){
-    
+
     #navbar-list ul {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
         position: fixed;
-        top: -200px;
+        top: -500px;
         right: 0px;
         width: 100%;
         background-color: #262333;
-        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
         padding: 40px 0 40px 10px;
         transition: 0.3s ease-in-out;
+        z-index: -1;
     }
 
     #navbar-list.active ul {
